Story(CCLS-2099) Post assessment endpoint
includes amendments to the PUT request to update existing assessments
